Fixed overflow on refresh

--- a/app/components/Header/Header.module.css
+++ b/app/components/Header/Header.module.css
@@ -11,6 +11,7 @@
 
 .container {
   height: 80px;
+  overflow: hidden;
   display: flex;
   justify-content: space-between;
   align-items: center;
